Implemented store-and-retrieve-data with JAXB