@@ -5,6 +5,9 @@
 *By Yannick Rüfenacht and Mohammed Ali*
 
 
+## !Projekt pullen!
+* "--add-modules java.xml.bind" zu VM-Options hinzufügen
+
 
 ## Git Workflow
 
